--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "classnames": "^2.3.1",
     "core-js": "^3.23.2",
     "graphql": "^16.5.0",
+    "mdb-react-ui-kit": "^4.2.0",
     "meteor-node-stubs": "^1.2.3",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
