Issue #123 - Move Professors Data Code to Project

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -12,6 +12,8 @@
     { "name": "Boogie Board", "quantity": 2, "owner": "admin@foo.com", "condition": "excellent" }
   ],
   "public": {
-    "development": true
+    "development": true,
+    "measuresFileName": "measures.json",
+    "loadMeasures": true
   }
 }
