(eric-issue-135) Edited MATP.js, Extracted data from custom measures.json (smallMeasures.json)
Added measuresCollection in MATP.js,
for now, was able to extract data from measuresCollection with useTracker() and console.log()

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -13,7 +13,7 @@
   ],
   "public": {
     "development": true,
-    "measuresFileName": "measures.json",
+    "measuresFileName": "smallMeasures.json",
     "loadMeasures": true
   }
 }
