--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "simpl-schema": "^1.12.2",
+    "styled-components": "^5.3.6",
     "sweetalert": "^2.1.2",
     "uniforms": "^3.9.1",
     "uniforms-bootstrap5": "^3.9.1",
