issue-185 defined user data
- defined: office, phone, image, testimony role and responsibilities
-updated SignUpAdmin, create user

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -1,99 +1,115 @@
 {
   "defaultAccounts": [
-
     { "email": "admin@foo.com",
       "password": "changeme",
       "role": "ADMIN",
       "firstName": "ADMIN",
       "lastName": "MATRP",
-      "office": "",
+      "phone": "",
+      "img": "",
+      "office": "ADMIN",
       "testimonyRole": "",
-      "Responsibilities": ""
+      "task": ""
     },
     { "email": "john@foo.com",
       "password": "changeme",
-      "role": "USER" ,
-      "firstName": "John",
-      "lastName": "Doe",
+      "role": "User",
+      "firstName": "ADMIN",
+      "lastName": "MATRP",
+      "phone": "",
+      "img": "/images/sharky.png",
       "office": "",
       "testimonyRole": "",
-      "Responsibilities": ""
+      "task": ""
     },
     { "email": "secretary@foo.com",
       "password": "changeme",
       "role": "SECRETARY",
-      "firstName": "SECRET",
-      "lastName": "ARY",
+      "firstName": "SECRETARY",
+      "lastName": "N/A",
+      "phone": "",
+      "img": "",
       "office": "",
-      "testimonyRole": "processor",
-      "Responsibilities": [
-        "Assigns testimony to appropriate subject matter expert",
-        "Submits final version of testimony to Legislature, email partners, loads testimony onto measures"
-      ]
+      "testimonyRole": "Processor",
+      "task": "Assigns testimony to appropriate subject matter expert. Submits final version of testimony to Legislature, email partners, loads testimony onto measures"
     },
     { "email": "specialist@foo.com",
       "password": "changeme",
       "role": "SPECIALIST",
       "firstName": "EDUCATIONAL",
       "lastName": "SPECIALIST",
+      "phone": "",
+      "img": "",
       "office": "",
-      "testimonyRole": "writer",
-      "Responsibilities": "Drafts testimony; routes to Office Approver"
-    },
+      "testimonyRole": "Writer",
+      "task": "Drafts testimony; routes to Office Approver"
+      },
     { "email": "analyst@foo.com",
       "password": "changeme",
       "role": "ANALYST",
       "firstName": "INSTITUTIONAL",
       "lastName": "ANALYST",
+      "phone": "",
+      "img": "",
       "office": "",
-      "testimonyRole": "writer",
-      "Responsibilities": "Drafts testimony; routes to Office Approver"
-    },
+      "testimonyRole": "Writer",
+      "task": "Drafts testimony; routes to Office Approver"
+       },
     { "email": "assistant@foo.com",
       "password": "changeme",
       "role": "ASSISTANT",
       "firstName": "ASSISTANT",
       "lastName": "SUPERINTENDENT",
+      "phone": "",
+      "img": "",
       "office": "",
-      "testimonyRole": "office",
-      "Responsibilities": "Reviews testimony for accuracy, thoroughness, and alignment with HIDOE priorities and positions, routes to PIPE approver"
-    },
+      "testimonyRole": "Office Approver",
+      "task": "Reviews testimony for accuracy, thoroughness, and alignment with HIDOE priorities and positions, routes to PIPE approver"
+      },
     { "email": "director@foo.com",
       "password": "changeme",
       "role": "DIRECTOR",
-      "firstName": "DIRECT",
-      "lastName": "OR",
+      "firstName": "DIRECTOR",
+      "lastName": "N/A",
+      "phone": "",
+      "img": "",
       "office": "",
-      "testimonyRole": "office",
-      "Responsibilities": "Reviews testimony for accuracy, thoroughness, and alignment with HIDOE priorities and positions, routes to PIPE approver "
-    },
+      "testimonyRole": "Office Approver",
+      "task": "Reviews testimony for accuracy, thoroughness, and alignment with HIDOE priorities and positions, routes to PIPE approver "
+      },
     { "email": "administrator@foo.com",
       "password": "changeme",
       "role": "ADMINISTRATOR",
-      "firstName": "ADMIN",
-      "lastName": "ISTRATOR",
+      "firstName": "ADMINISTRATOR",
+      "lastName": "N/A",
+      "phone": "",
+      "img": "",
       "office": "",
-      "testimonyRole": "office",
-      "Responsibilities": "Reviews testimony for accuracy, thoroughness, and alignment with HIDOE priorities and positions, routes to PIPE approver "
-    },
+      "testimonyRole": "Office Approver",
+      "task": "Reviews testimony for accuracy, thoroughness, and alignment with HIDOE priorities and positions, routes to PIPE approver "
+      },
     { "email": "pipe@foo.com",
       "password": "changeme",
       "role": "PIPE",
       "firstName": "PIPE",
       "lastName": "STAFF",
+      "phone": "",
+      "img": "",
       "office": "",
-      "testimonyRole": "pipe",
-      "Responsibilities": "Reviews for potential policy conflicts; works with Office on any substantive changes; routes to Final Approver"
-    },
+      "testimonyRole": "Pipe Approver",
+      "task": "Reviews for potential policy conflicts; works with Office on any substantive changes; routes to Final Approver"
+      },
     { "email": "leadership@foo.com",
       "password": "changeme",
       "role": "leadership",
       "firstName": "HIDOE",
       "lastName": "LEADERSHIP",
+      "phone": "",
+      "img": "",
       "office": "",
-      "testimonyRole": "final",
-      "Responsibilities": "Ensures testimony best reflects the superintendents thinking and voice; approves final version of testimony, routes to secretary"
-    }
+      "testimonyRole": "Final Approver",
+      "task": "Ensures testimony best reflects the superintendents thinking and voice; approves final version of testimony, routes to secretary"
+      }
   ],
 
   "defaultData": [
