issue-160 Created Testimony Collection
still have to work on editing create testimony page

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -142,7 +142,9 @@
     "development": true,
     "measuresFileName": "smallMeasures.json",
     "hearingsFileName": "testHearing.json",
+    "testimonyFileName": "testTestimony.json",
     "loadMeasures": true,
-    "loadHearings": true
-    }
+    "loadHearings": true,
+    "loadTestimony": true
+  }
 }
