(issue-204) Added OfficeCollection.js and fixed MeasureOfficeCollection.js

--- a/config/settings.development.json
+++ b/config/settings.development.json
@@ -126,7 +126,10 @@
     "development": true,
     "measuresFileName": "smallMeasures.json",
     "hearingsFileName": "testHearing.json",
+    "officesFileName": "testOffices.json",
     "loadMeasures": true,
-    "loadHearings": true
+    "loadHearings": true,
+    "loadOffices": true,
+    "loadMeasureOffices": true
     }
 }
